--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="submit_btn">Submit</string>
     <string name="signup_question">Don\'t have an account?</string>
     <string name="signup_text">Sign up.</string>
+    <string name="signup_title">Username and Password</string>
+    <string name="signup_button_text">Sign up</string>
 </resources>
