--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Parstagram</string>
-    <string name="login_button">Login</string>
-    <string name="submit_description">Description...</string>
+    <string name="login_button">Log in</string>
+    <string name="submit_description">Write a caption..</string>
     <string name="submit_take_pic">Take Picture</string>
-    <string name="submit_btn">Submit</string>
+    <string name="submit_btn">Share</string>
     <string name="signup_question">Don\'t have an account?</string>
     <string name="signup_text">Sign up.</string>
     <string name="signup_title">Username and Password</string>
